added auth endpoint logic
